add SearchSelect widget

--- a/terminal-widgets.cabal
+++ b/terminal-widgets.cabal
@@ -55,11 +55,14 @@ library
         System.Terminal.Render,
         System.Terminal.Widgets.Buttons,
         System.Terminal.Widgets.Common,
+        System.Terminal.Widgets.SearchSelect,
         System.Terminal.Widgets.Select,
         System.Terminal.Widgets.TextInput,
     build-depends:
         base >= 4.16 && < 5,
         exceptions,
+        extra,
+        fuzzy,
         generic-lens,
         mtl,
         prettyprinter,
