--- a/terminal-widgets.cabal
+++ b/terminal-widgets.cabal
@@ -45,6 +45,7 @@ common common
         OverloadedStrings
         RecordWildCards
         RecursiveDo
+        StrictData
         TypeFamilies
         ViewPatterns
 
