--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: cachix/install-nix-action@v25
+    - uses: ners/simply-nix@main
     - uses: ryanccn/attic-action@v0
       with:
         endpoint: https://cache.ners.ch
